<resources>
    <string name="app_name">Rove</string>
    <string name="visitTitle">Add business name</string>
    <string name="editVisitTitle">Business name</string>
    <string name="visitSubtitle">Please Rate the business for accessibility</string>
    <string name="addVisitButton">Save Visit</string>
    <string name="editVisitType">Business type</string>
    <string name="select_visit_image">Select image</string>
    <string name="bar">Bar</string>
    <string name="restaurant">Restaurant</string>
    <string name="museum">Museum</string>
    <string name="shop">Shop</string>
    <string name="hotel">Hotel</string>
    <string name="rating">Rating</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_rating">Enter Rating</string>
    <string name="edit_rating">Edit Rating</string>
    <string name="action_addVisit">Add Visit</string>
    <string name="action_report">Report</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_subtitle">Rove, a mobility friendly app</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About Us</string>
    <string name="aboutus_title">Rove, a mobility friendly app</string>
    <string name="aboutus_message">Signup to rate your trips for accessibility</string>

    <string name="visitsNotFound">No Visits Added Yet!</string>
    <string name="visitError">Error : Couldn\'t Add Visit…</string>
    <string name="visitDetails">Visit Details</string>

    <string name="messageLoading">Please Wait while Visits are Loading...</string>

    <string name="visitType">Business type:</string>
    <string name="message">Message :</string>
    <string name="select_profile_image">Select Profile Image</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="visitMap">Location</string>

</resources>