<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/reportFragment">

    <fragment
        android:id="@+id/visitFragment"
        android:name="ie.wit.donationx.ui.visit.VisitFragment"
        android:label="@string/action_addVisit"
        tools:layout="@layout/fragment_visit" >
        <action
            android:id="@+id/action_visitFragment_to_reportFragment"
            app:destination="@id/reportFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/reportFragment"
        android:name="ie.wit.donationx.ui.report.ReportFragment"
        android:label="@string/action_report"
        tools:layout="@layout/fragment_report" >
        <action
            android:id="@+id/action_reportFragment_to_visitFragment"
            app:destination="@id/visitFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_reportFragment_to_visitDetailFragment"
            app:destination="@id/visitDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="ie.wit.donationx.ui.about.AboutFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/visitDetailFragment"
        android:name="ie.wit.donationx.ui.detail.VisitDetailFragment"
        android:label="Visit Detail"
        tools:layout="@layout/fragment_visit_detail" >
        <action
            android:id="@+id/action_visitDetailFragment_to_reportFragment"
            app:destination="@id/reportFragment" />
        <argument
            android:name="visitid"
            app:argType="long" />
    </fragment>
</navigation>