<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="visitvm"
        type="ie.wit.donationx.ui.detail.VisitDetailViewModel" />
</data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.VisitDetailFragment">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="165dp"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:text="@string/editVisitTitle"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/editTitle"
            app:layout_constraintHorizontal_bias="0.791"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="4dp"
            android:inputType="text"
            android:hint="@string/editVisitTitle"
            android:text="@{visitvm.observableVisit.visitTitle}"
            android:textAlignment="textStart"
            android:textColor="@color/color_primary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editVisitType" />

        <EditText
            android:id="@+id/editVisitType"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:layout_marginEnd="4dp"
            android:inputType="text"
            android:hint="@string/editVisitType"
            android:text="@{visitvm.observableVisit.visitType}"
            android:textAlignment="textStart"
            android:textColor="@color/color_primary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editRating"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="244dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/edit_rating"
            android:inputType="text"
            android:text="@{Float.toString(visitvm.observableVisit.rating)}"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="145dp"
            android:layout_height="43dp"
            android:layout_marginTop="252dp"
            android:layout_marginEnd="248dp"
            android:text="@string/edit_rating"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="160dp"
            android:layout_height="37dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="232dp"
            android:text="@string/visitType"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/editVisitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteVisitButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/deleteVisitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editVisitButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>